# pdf_agent

./: .env.dev  .env.dev.sample  .env.local  .gitignore  AGENTS.md  API_DOCS_UPLOAD.md  IMPLEMENTATION_SUMMARY.md  LOGIN_API_SUMMARY.md  README.md  config.yaml  config.yaml.sample  create_test_user.py  main.py  pyproject.toml  test_registration_endpoint.py
.agent/skills/issue2pr/: SKILL.md
.ai/: ai-guidelines.md  compact_guidelines.md
.github/workflow/: pdf_agent_cicd.yaml
config/database/: init_database.py
config/database/migrations/: 001_auth_schema.sql  README.md  SCHEMA_DIAGRAM.md
config/database/models/: DESIGN_PATTERNS.md  __init__.py  model_auth.py  model_document.py  model_user.py
migrations/: 001_authentication_schema.sql  README.md  usage_examples.py
security/: __init__.py  example_usage.py  test_jwt_auth.py  token_operations.py
src/pdf_ai_agent/: __init__.py
src/pdf_ai_agent/api/: __init__.py  exceptions.py  rate_limit.py  rate_limiter.py  utils.py
src/pdf_ai_agent/api/routes/: auth.py  chat_sessions.py  documents.py  notes.py
src/pdf_ai_agent/api/schemas/: auth_schemas.py  chat_schemas.py  document_schemas.py  note_schemas.py
src/pdf_ai_agent/api/services/: auth_service.py  chat_session_service.py  document_service.py  note_service.py
src/pdf_ai_agent/api/utilties/: workspace_utils.py
src/pdf_ai_agent/api/v1/auth/: router.py  schemas.py
src/pdf_ai_agent/config/: app_config.py  jwt_config.py  oauth_config.py
src/pdf_ai_agent/config/database/: init_database.py
src/pdf_ai_agent/config/database/models/: __init__.py  model_auth.py  model_base.py  model_document.py  model_user.py
src/pdf_ai_agent/jobs/: __init__.py  job_queue.py
src/pdf_ai_agent/security/: README.md  example_usage.py  exceptions.py  key_manager.py  password.py  password_utils.py  token_operations.py
src/pdf_ai_agent/storage/: __init__.py  local_storage.py
test/: conftest.py
test/integration_test/: test_anchor_creation.py  test_anchor_retrieval.py  test_chat_sessions_create.py  test_chat_sessions_get.py  test_chat_sessions_list.py  test_document_list.py  test_document_metadata.py  test_document_pages_metadata.py  test_document_streaming.py  test_document_upload.py  test_get_note.py  test_note_creation.py  test_note_list.py  test_note_patch.py
test/unit_test/: test_anchor_validation.py  test_chat_session_get_service.py  test_chat_session_list_service.py  test_chat_session_service.py  test_document_components.py  test_document_cursor.py  test_filename_sanitization.py  test_get_note_service.py  test_jwt_auth.py  test_login_components.py  test_note_list_service.py  test_note_service.py  test_oauth.py  test_range_parsing.py  test_registration.py
