[project]
name = "pdf-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
    "pyjwt>=2.10.1",
    "cryptography>=44.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
]
