[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
    "pyjwt>=2.10.1",
    "cryptography>=42.0.0",
    "pytest>=9.0.2",
    "bcrypt>=4.0.0",
    "pydantic[email]>=2.12.5",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["pdf_ai_agent"]  # 自动发现 src/pdf_ai_agent 及其子包

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]
minversion = "8.0"
addopts = "-v"

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
src_paths = ["src", "test"]