[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
    "pyjwt>=2.10.1",
    "cryptography>=42.0.0",
    "pytest>=9.0.2",
    "passlib[argon2]>=1.7.4",
    "python-multipart>=0.0.6",
    "email-validator>=2.0.0",
    "asyncpg>=0.30.0",
    "greenlet>=3.3.0",
    "pytest-asyncio>=1.3.0",
    "aiosqlite>=0.20.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.1",
    "google-auth>=2.47.0",
    "requests>=2.31.0",
    "ruff>=0.14.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

# 开启自动发现模式
[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]
minversion = "8.0"
addopts = "-v"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
src_paths = ["src", "test"]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]
